--- a/potrace/src/.deps/backend_eps.Po
+++ b/potrace/src/.deps/backend_eps.Po
@@ -1,21 +1,30 @@
 backend_eps.o: backend_eps.c ../config.h /usr/include/stdio.h \
-  /usr/include/sys/cdefs.h /usr/include/sys/_symbol_aliasing.h \
+  /usr/include/_stdio.h /usr/include/sys/cdefs.h \
+  /usr/include/sys/_symbol_aliasing.h \
   /usr/include/sys/_posix_availability.h /usr/include/Availability.h \
   /usr/include/AvailabilityInternal.h /usr/include/_types.h \
   /usr/include/sys/_types.h /usr/include/machine/_types.h \
   /usr/include/i386/_types.h /usr/include/sys/_pthread/_pthread_types.h \
-  /usr/include/sys/_types/_va_list.h /usr/include/sys/_types/_size_t.h \
+  /usr/include/sys/_types/_va_list.h /usr/include/machine/types.h \
+  /usr/include/i386/types.h /usr/include/sys/_types/_int8_t.h \
+  /usr/include/sys/_types/_int16_t.h /usr/include/sys/_types/_int32_t.h \
+  /usr/include/sys/_types/_int64_t.h /usr/include/sys/_types/_u_int8_t.h \
+  /usr/include/sys/_types/_u_int16_t.h \
+  /usr/include/sys/_types/_u_int32_t.h \
+  /usr/include/sys/_types/_u_int64_t.h \
+  /usr/include/sys/_types/_intptr_t.h \
+  /usr/include/sys/_types/_uintptr_t.h /usr/include/sys/_types/_size_t.h \
   /usr/include/sys/_types/_null.h /usr/include/sys/stdio.h \
   /usr/include/sys/_types/_off_t.h /usr/include/sys/_types/_ssize_t.h \
   /usr/include/secure/_stdio.h /usr/include/secure/_common.h \
-  /Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/include/stdarg.h \
+  /Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/stdarg.h \
   /usr/include/string.h /usr/include/secure/_string.h \
   /usr/include/math.h /usr/include/stdlib.h /usr/include/sys/wait.h \
   /usr/include/sys/_types/_pid_t.h /usr/include/sys/_types/_id_t.h \
   /usr/include/sys/signal.h /usr/include/sys/appleapiopts.h \
   /usr/include/machine/signal.h /usr/include/i386/signal.h \
   /usr/include/machine/_mcontext.h /usr/include/i386/_mcontext.h \
-  /usr/include/mach/i386/_structs.h \
+  /usr/include/mach/machine/_structs.h /usr/include/mach/i386/_structs.h \
   /usr/include/sys/_pthread/_pthread_attr_t.h \
   /usr/include/sys/_types/_sigaltstack.h \
   /usr/include/sys/_types/_ucontext.h \
@@ -27,6 +36,8 @@ backend_eps.o: backend_eps.c ../config.h /usr/include/stdio.h \
 ../config.h:
 
 /usr/include/stdio.h:
+
+/usr/include/_stdio.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -50,6 +61,30 @@ backend_eps.o: backend_eps.c ../config.h /usr/include/stdio.h \
 
 /usr/include/sys/_types/_va_list.h:
 
+/usr/include/machine/types.h:
+
+/usr/include/i386/types.h:
+
+/usr/include/sys/_types/_int8_t.h:
+
+/usr/include/sys/_types/_int16_t.h:
+
+/usr/include/sys/_types/_int32_t.h:
+
+/usr/include/sys/_types/_int64_t.h:
+
+/usr/include/sys/_types/_u_int8_t.h:
+
+/usr/include/sys/_types/_u_int16_t.h:
+
+/usr/include/sys/_types/_u_int32_t.h:
+
+/usr/include/sys/_types/_u_int64_t.h:
+
+/usr/include/sys/_types/_intptr_t.h:
+
+/usr/include/sys/_types/_uintptr_t.h:
+
 /usr/include/sys/_types/_size_t.h:
 
 /usr/include/sys/_types/_null.h:
@@ -64,7 +99,7 @@ backend_eps.o: backend_eps.c ../config.h /usr/include/stdio.h \
 
 /usr/include/secure/_common.h:
 
-/Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/include/stdarg.h:
+/Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/stdarg.h:
 
 /usr/include/string.h:
 
@@ -91,6 +126,8 @@ backend_eps.o: backend_eps.c ../config.h /usr/include/stdio.h \
 /usr/include/machine/_mcontext.h:
 
 /usr/include/i386/_mcontext.h:
+
+/usr/include/mach/machine/_structs.h:
 
 /usr/include/mach/i386/_structs.h:
 
