--- a/potrace/src/.deps/main.Po
+++ b/potrace/src/.deps/main.Po
@@ -1,10 +1,18 @@
-main.o: main.c ../config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
-  /usr/include/sys/_symbol_aliasing.h \
+main.o: main.c ../config.h /usr/include/stdio.h /usr/include/_stdio.h \
+  /usr/include/sys/cdefs.h /usr/include/sys/_symbol_aliasing.h \
   /usr/include/sys/_posix_availability.h /usr/include/Availability.h \
   /usr/include/AvailabilityInternal.h /usr/include/_types.h \
   /usr/include/sys/_types.h /usr/include/machine/_types.h \
   /usr/include/i386/_types.h /usr/include/sys/_pthread/_pthread_types.h \
-  /usr/include/sys/_types/_va_list.h /usr/include/sys/_types/_size_t.h \
+  /usr/include/sys/_types/_va_list.h /usr/include/machine/types.h \
+  /usr/include/i386/types.h /usr/include/sys/_types/_int8_t.h \
+  /usr/include/sys/_types/_int16_t.h /usr/include/sys/_types/_int32_t.h \
+  /usr/include/sys/_types/_int64_t.h /usr/include/sys/_types/_u_int8_t.h \
+  /usr/include/sys/_types/_u_int16_t.h \
+  /usr/include/sys/_types/_u_int32_t.h \
+  /usr/include/sys/_types/_u_int64_t.h \
+  /usr/include/sys/_types/_intptr_t.h \
+  /usr/include/sys/_types/_uintptr_t.h /usr/include/sys/_types/_size_t.h \
   /usr/include/sys/_types/_null.h /usr/include/sys/stdio.h \
   /usr/include/sys/_types/_off_t.h /usr/include/sys/_types/_ssize_t.h \
   /usr/include/secure/_stdio.h /usr/include/secure/_common.h \
@@ -13,7 +21,7 @@ main.o: main.c ../config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
   /usr/include/sys/signal.h /usr/include/sys/appleapiopts.h \
   /usr/include/machine/signal.h /usr/include/i386/signal.h \
   /usr/include/machine/_mcontext.h /usr/include/i386/_mcontext.h \
-  /usr/include/mach/i386/_structs.h \
+  /usr/include/mach/machine/_structs.h /usr/include/mach/i386/_structs.h \
   /usr/include/sys/_pthread/_pthread_attr_t.h \
   /usr/include/sys/_types/_sigaltstack.h \
   /usr/include/sys/_types/_ucontext.h \
@@ -21,18 +29,21 @@ main.o: main.c ../config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
   /usr/include/sys/resource.h /usr/include/sys/_types/_timeval.h \
   /usr/include/sys/_types/_wchar_t.h /usr/include/errno.h \
   /usr/include/sys/errno.h /usr/include/string.h \
-  /usr/include/secure/_string.h /usr/include/strings.h getopt.h \
-  /usr/include/ctype.h /usr/include/runetype.h /usr/include/math.h \
+  /usr/include/secure/_string.h /usr/include/strings.h \
+  /usr/include/secure/_strings.h getopt.h /usr/include/ctype.h \
+  /usr/include/_ctype.h /usr/include/runetype.h /usr/include/math.h \
   main.h potracelib.h progress_bar.h auxiliary.h trans.h backend_pdf.h \
   backend_eps.h backend_pgm.h backend_svg.h backend_xfig.h backend_dxf.h \
   backend_geojson.h bitmap_io.h bitmap.h \
-  /Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/include/stddef.h \
-  /Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/include/__stddef_max_align_t.h \
+  /Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/stddef.h \
+  /Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/__stddef_max_align_t.h \
   platform.h
 
 ../config.h:
 
 /usr/include/stdio.h:
+
+/usr/include/_stdio.h:
 
 /usr/include/sys/cdefs.h:
 
@@ -55,6 +66,30 @@ main.o: main.c ../config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
 /usr/include/sys/_pthread/_pthread_types.h:
 
 /usr/include/sys/_types/_va_list.h:
+
+/usr/include/machine/types.h:
+
+/usr/include/i386/types.h:
+
+/usr/include/sys/_types/_int8_t.h:
+
+/usr/include/sys/_types/_int16_t.h:
+
+/usr/include/sys/_types/_int32_t.h:
+
+/usr/include/sys/_types/_int64_t.h:
+
+/usr/include/sys/_types/_u_int8_t.h:
+
+/usr/include/sys/_types/_u_int16_t.h:
+
+/usr/include/sys/_types/_u_int32_t.h:
+
+/usr/include/sys/_types/_u_int64_t.h:
+
+/usr/include/sys/_types/_intptr_t.h:
+
+/usr/include/sys/_types/_uintptr_t.h:
 
 /usr/include/sys/_types/_size_t.h:
 
@@ -90,6 +125,8 @@ main.o: main.c ../config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
 
 /usr/include/i386/_mcontext.h:
 
+/usr/include/mach/machine/_structs.h:
+
 /usr/include/mach/i386/_structs.h:
 
 /usr/include/sys/_pthread/_pthread_attr_t.h:
@@ -118,9 +155,13 @@ main.o: main.c ../config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
 
 /usr/include/strings.h:
 
+/usr/include/secure/_strings.h:
+
 getopt.h:
 
 /usr/include/ctype.h:
+
+/usr/include/_ctype.h:
 
 /usr/include/runetype.h:
 
@@ -154,8 +195,8 @@ bitmap_io.h:
 
 bitmap.h:
 
-/Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/include/stddef.h:
+/Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/stddef.h:
 
-/Library/Developer/CommandLineTools/usr/lib/clang/9.0.0/include/__stddef_max_align_t.h:
+/Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/__stddef_max_align_t.h:
 
 platform.h:
